app-test/testdata/typesystem/neg/pattern-matching-input-pattern/check/patmat.check
testdata/typesystem/neg/pattern-matching-input-pattern/src/patmat.cal:5:20: error: Incompatible types; expected int but was T.
        action IN:[T(n, _)] ==>
                   ^^^^^^^